objects/Threshold__c.object
<CustomObject>
    <fields>
        <fullName>Geo_Name__c</fullName>
        <label>Geo Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>AMERICAS</fullName>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lower_Threshold__c</fullName>
        <description>Nov 13 Release: To store lower limit threshold for deal conversion</description>
        <label>Lower Threshold</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold_Amount__c</fullName>
        <description>Threshold Amount for GEO</description>
        <label>Threshold Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upper_Threshold__c</fullName>
        <description>Nov 13 Release: To store upper limit threshold for deal conversion</description>
        <label>Upper Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>P360- Object is created for Phase 2B so as to hold the value for the deal amount. This object will be synched with RJ table and will be available only for the following profiles- ADMIN, GSTS, GSTS Analyst.</description>
    <label>Threshold</label>
    <nameField>
        <displayFormat>Threshold-{0}</displayFormat>
        <label>Threshold</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Thresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Geo_Name__c</columns>
        <columns>Threshold_Amount__c</columns>
        <columns>Lower_Threshold__c</columns>
        <columns>Upper_Threshold__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>